fixes on spacings inside blog__article

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -116,17 +116,25 @@
     }
 
     h2 {
-      padding: theme(padding.10) theme(padding.3) 0;
+      padding: theme(padding.6) theme(padding.3) 0;
+      max-width: 67ch;
     }
 
     h3 {
       padding: 0 theme(padding.3);
+      max-width: 67ch;
+    }
+
+    video,
+    figure {
+      padding: theme(padding.8) 0;
     }
 
     p,
     li {
       padding: 0 theme(padding.3);
       color: theme(colors.clan-primary.900);
+      max-width: 67ch;
     }
 
     ul,
@@ -134,10 +142,10 @@
       display: flex;
       flex-direction: column;
       gap: theme(padding.4) 0;
-      padding: theme(padding.8) 0 theme(padding.8) theme(padding.4);
+      padding: 0 0 0 theme(padding.4);
 
       @media screen(md) {
-        padding: theme(padding.8) 0 theme(padding.8) theme(padding.8);
+        padding: 0 0 0 theme(padding.8);
       }
 
       & ul,
@@ -146,7 +154,7 @@
         padding-right: 0;
 
         @media screen(md) {
-          padding: theme(padding.8) 0 theme(padding.8) theme(padding.8);
+          padding: 0 0 0 theme(padding.8);
         }
       }
     }
